[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiombraid"
version = "1.0.1"
description = "Explainable, safety-first data quality, validation, cleaning, and drift analysis."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Muhammad Adil"}]
keywords = [
  "data-quality", "data-cleaning", "validation", "profiling",
  "drift-detection", "pandas", "explainable-ai", "data-governance"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "PyYAML>=6.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
charts = ["matplotlib>=3.8"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "build>=1.2",
  "twine>=5.0",
  "ruff>=0.6",
  "matplotlib>=3.8",
]
all = ["matplotlib>=3.8", "mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.scripts]
axiombraid = "axiombraid.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
axiombraid = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["axiombraid"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
